# planets-rotation-lhires

./: LICENSE  README.md  pyproject.toml
Data/: README.md
Data/Jupiter/00_58_52/: Jupiter_00001.CameraSettings.txt  Jupiter_00002.CameraSettings.txt  Jupiter_00003.CameraSettings.txt
Data/Jupiter/01_06_07/: Jupiter_00001.CameraSettings.txt  Jupiter_00002.CameraSettings.txt  Jupiter_00003.CameraSettings.txt
Data/Jupiter/01_12_45/: Jupiter_00001.CameraSettings.txt  Jupiter_00002.CameraSettings.txt  Jupiter_00003.CameraSettings.txt
Data/Saturn/00_58_00/: Saturn_00001.CameraSettings.txt  Saturn_00002.CameraSettings.txt  Saturn_00003.CameraSettings.txt
Data/Saturn/01_23_03/: Saturn_00001.CameraSettings.txt  Saturn_00002.CameraSettings.txt  Saturn_00003.CameraSettings.txt
Data/Saturn/01_31_04/: Saturn_00001.CameraSettings.txt  Saturn_00002.CameraSettings.txt
Data/Saturn/01_37_13/: Saturn_00001.CameraSettings.txt  Saturn_00002.CameraSettings.txt  Saturn_00003.CameraSettings.txt
Data/Saturn/01_51_09/: Saturn_00001.CameraSettings.txt  Saturn_00002.CameraSettings.txt  Saturn_00003.CameraSettings.txt
