[tool.poetry]
name = "planets-rotation-speed"
version = "0.0.0"
description = "A demo of the famous spectroscopic determination of planets rotation speed"
authors = ["Manon <manonmarchand22@gmail.com>"]
license = "BSD-3"
readme = "README.md"
packages = [{include = "planets_rotation_speed"}]

[tool.poetry.dependencies]
python = "^3.8"
astropy = "^5.1.1"
scikit-image = "^0.19.3"
scipy = "^1.9.3"
numpy = "^1.23.5"

[tool.poetry.group.dev.dependencies]
pre-commit = "^2.20.0"
nbqa = "^1.5.3"
pytest = "^7.2.0"
nbmake = "^1.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
